To fix flickering issue

--- a/src/views/examples/App.css
+++ b/src/views/examples/App.css
@@ -76,3 +76,12 @@ html#ecwid_html body#ecwid_body .hc-widget .hc-product-tabs#hc-product-tabs {
   padding: 0 20px;
   width: 90% !important;
 }
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
